src/objects/Orchestrator_Sample_Job_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Jobs__c</fullName>
        <label>Jobs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territory_Node_Id__c</fullName>
        <label>Parent Territory Node Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Model_Id__c</fullName>
        <label>Territory Model Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type_ID__c</fullName>
        <label>Territory Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Orchestrator Sample Job Setting</label>
    <pluralLabel>Orchestrator Sample Job Settings</pluralLabel>
</CustomObject>